# autoselect

./: .gitattributes  .gitignore  Cargo.toml  README.md  compare  run
fixtures/: multiple_pages.html  single_page.html
src/: main.rs
src/snapshots/: autoselect__tests__display_item.snap  autoselect__tests__scrape_single_page.snap
