[package]
name = "autoselect"
version = "0.1.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]
edition = "2018"

[dependencies]
minreq = { version = "2.2", features = ["https-native"] }
main_error = "0.1"
scraper = "0.12"

[dev-dependencies]
insta = "1.1.0"

[profile.release]
opt-level = "s"
panic = "abort"
lto = true

